# fsaudit

./: .gitignore  FSAudit_PRD_v1.0.md  LICENSE  README.md  path  pyproject.toml
.atl/: skill-registry.md
.engram/: manifest.json
openspec/: config.yaml
openspec/changes/excel-dashboard/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/excel-dashboard/specs/excel-dashboard/: spec.md
openspec/changes/phase1-analyzer/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/phase1-analyzer/specs/alerts/: spec.md
openspec/changes/phase1-analyzer/specs/analyzer/: spec.md
openspec/changes/phase1-classifier/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/phase1-classifier/specs/classifier/: spec.md
openspec/changes/phase1-cli/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/phase1-cli/specs/cli/: spec.md
openspec/changes/phase1-excel-reporter/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/phase1-excel-reporter/specs/excel-sheets/: spec.md
openspec/changes/phase1-excel-reporter/specs/reporter-base/: spec.md
openspec/changes/phase1-infrastructure/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/phase1-infrastructure/specs/classifier-config/: spec.md
openspec/changes/phase1-infrastructure/specs/models/: spec.md
openspec/changes/phase1-infrastructure/specs/project-structure/: spec.md
openspec/changes/phase1-scanner/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/phase1-scanner/specs/error-handling/: spec.md
openspec/changes/phase1-scanner/specs/platform/: spec.md
openspec/changes/phase1-scanner/specs/scanner/: spec.md
src/fsaudit/: __init__.py  api.py  cli.py  logging_config.py  shortcut.py  updater.py
src/fsaudit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fsaudit/analyzer/: __init__.py  analyzer.py  metrics.py
src/fsaudit/classifier/: __init__.py  categories.yaml  classifier.py
src/fsaudit/enricher/: __init__.py  author.py
src/fsaudit/persistence/: __init__.py  db.py  repository.py  schema.py
src/fsaudit/reporter/: __init__.py  base.py  excel_reporter.py  html_reporter.py
src/fsaudit/reporter/templates/: report.html
src/fsaudit/scanner/: __init__.py  models.py  platform_utils.py  scanner.py
src/fsaudit/tui/: __init__.py  app.py  app.tcss  models.py
src/fsaudit/tui/screens/: __init__.py  config.py  folder_selector.py  progress.py  results.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_author_enricher.py  test_categories.py  test_classifier.py  test_cli.py  test_excel_reporter.py  test_hash_duplicates.py  test_health_score.py  test_html_reporter.py  test_logging.py  test_models.py  test_persistence.py  test_platform_utils.py  test_scanner.py  test_shortcut.py  test_tui.py  test_updater.py
