[project]
name = "fsaudit"
version = "0.1.0"
description = "Filesystem audit tool — scan, classify, analyze, and report on directory contents"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "Jinja2>=3.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
